<resources>
    <string name="app_name">Wagba</string>
    <string name="entry_background">Background for Entry Screen</string>
    <string name="facultyEmailPrompt">Login with Faculty Email</string>
    <string name="personalEmailPrompt">Login with Personal Email</string>
    <string name="emailLabel">\u00A0Email</string>
    <string name="passwordLabel">\u00A0Password</string>
    <string name="loginBtnText">Login</string>
    <string name="loginBtnPleaseWaitText">Please wait…</string>
    <string name="registerHyperlinkText">Enter your email above to register.</string>
    <string name="registerPromptText">Don\'t have an account yet? No problem!</string>
    <string name="restaurants">Restaurants</string>
    <string name="eat_prompt">Where would you like to order from today?</string>
    <string name="restaurantPictureDesc">Picture of restaurant</string>
    <string name="dishes">Dishes</string>
    <string name="order_prompt">What would you like to order?</string>
    <string name="dishPictureDesc">Picture of dish</string>
    <string name="profile_page_trigger_icon">Profile Page Trigger Icon</string>
    <string name="portal_prompt">Sit tight, taking you to portal login…</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="gmailPrompt">Login with Google (Gmail)</string>
    <string name="gmail_prompt">Sit tight, taking you to Google…</string>
    <string name="welcome_prompt">Welcome!</string>
    <string name="username_placeholder">Your Name</string>
    <string name="testingInsertPrompt">For testing, insert the following into the email field…</string>
    <string name="testingEntranceKeyword">admin</string>
    <string name="checkEmailPrompt">Please check your email:</string>
    <string name="savePrompt">Save</string>
    <string name="uploadPrompt">Upload</string>
    <string name="uploadingPrompt">Uploading…</string>
    <string name="browsePrompt">Browse</string>
    <string name="profileCreationPageTitle">Stylish!</string>
    <string name="profilePicChangeBtn">Change your profile picture!</string>
    <string name="proceed_to_app_btn">Proceed</string>
    <string name="email_placeholder">john@doe.com</string>
    <string name="displayNameEditBtn">Edit your display name!</string>
    <string name="genderPlaceholder">Gender Unspecified</string>
    <string name="restaurantNamePlaceholder">Some restaurant</string>
    <string name="restaurantAddressPlaceholder">123 Some City, Some Address St.</string>
    <string name="dishNamePlaceholder">Some dish</string>
    <string name="dishDescriptionPlaceholder">123 Some City, Some Address St.</string>
    <string name="profileNavPrompt">Customize your Profile</string>
    <string name="cartNavPrompt">View Cart and Make Orders</string>
    <string name="ordersNavPrompt">Order History and Tracking</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="add_this_dish_to_cart">Add this dish to cart</string>
    <string name="cart">Cart</string>
    <string name="cart_prompt">Manage your cart and proceed with payment</string>
    <string name="orderPrompt">Order</string>
</resources>