<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:fitsSystemWindows="true"
    android:rowCount="2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:fontFamily="@font/curlz"
        android:gravity="center_horizontal|center_vertical"
        android:shadowColor="@color/night_primary_complementary"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textColor="@color/night_primary_complementary"
        android:textSize="96sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facultyEmailLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="32dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingVertical="8dp"
            android:text="@string/facultyEmailPrompt"
            android:textColor="@color/night_primary"
            app:backgroundTint="@color/night_primary_complementary"
            app:icon="@drawable/dark_logo_icon"
            app:iconSize="32dp"
            app:iconTint="@color/night_primary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gmailLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="32dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingVertical="8dp"
            android:text="@string/gmailPrompt"
            android:textColor="@color/night_primary"
            app:backgroundTint="@color/night_primary_complementary"
            app:icon="@drawable/google__g__logo"
            app:iconSize="32dp"
            app:iconTint="@color/night_primary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/personalEmailLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="32dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingVertical="8dp"
            android:text="@string/personalEmailPrompt"
            android:textColor="@color/night_primary"
            app:backgroundTint="@color/night_primary_complementary"
            app:icon="@drawable/dark_email_icon"
            app:iconSize="32dp"
            app:iconTint="@color/night_primary" />
    </LinearLayout>

</GridLayout>
