<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    app:cardBackgroundColor="@color/night_primary_complementary"
    app:cardCornerRadius="4dp"
    app:cardElevation="6dp"
    app:cardMaxElevation="12dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/dishPictureDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/outOfStockPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:background="@color/design_default_color_error"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/out_of_stock"
            android:textColor="@color/night_primary_complementary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dishNameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:paddingHorizontal="12dp"
            android:paddingTop="12dp"
            android:text="@string/dishNamePlaceholder"
            android:textColor="@color/night_accent_complementary100"
            android:textDirection="ltr"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/dishDescTV"
            app:layout_constraintEnd_toStartOf="@id/proceedBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/proceedBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img" />

        <TextView
            android:id="@+id/dishDescTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:paddingHorizontal="12dp"
            android:paddingBottom="12dp"
            android:text="@string/dishDescriptionPlaceholder"
            android:textColor="@color/night_accent_complementary50"
            android:textDirection="ltr"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dishNameTV" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proceedBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="@color/night_primary_complementary"
            android:contentDescription="@string/add_this_dish_to_cart"
            android:drawableEnd="@drawable/add_icon"
            android:drawableTint="@color/night_primary"
            android:elevation="8dp"
            android:foregroundTint="@color/night_primary"
            android:paddingStart="-16dp"
            android:paddingEnd="12dp"
            android:stateListAnimator="@null"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dishDescTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>