<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/night_accent_complementary75"
    android:fitsSystemWindows="true"
    tools:context=".activities.RestaurantsActivity">

    <TextView
        android:id="@+id/dishesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/curlz"
        android:text="@string/dishes"
        android:textColor="@color/night_primary_complementary"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:contentDescription="@string/profile_page_trigger_icon"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/user_placeholder"
        app:layout_constraintBottom_toBottomOf="@id/dishesTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/dishesTV" />

    <TextView
        android:id="@+id/order_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_prompt"
        android:textColor="@color/night_primary_complementary"
        app:layout_constraintLeft_toLeftOf="@id/dishesTV"
        app:layout_constraintStart_toStartOf="@id/dishesTV"
        app:layout_constraintTop_toBottomOf="@id/dishesTV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dishesRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_prompt" />


</androidx.constraintlayout.widget.ConstraintLayout>