<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/night_accent_complementary75"
    tools:context=".activities.RestaurantsActivity">


    <TextView
        android:id="@+id/restaurantsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/curlz"
        android:text="@string/restaurants"
        android:textColor="@color/night_primary_complementary"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/circular_background"
        android:clickable="true"
        android:contentDescription="@string/profile_page_trigger_icon"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/person_picture_foreground"
        app:layout_constraintBottom_toBottomOf="@id/restaurantsTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/restaurantsTV"
        app:tint="@color/night_primary_complementary" />

    <TextView
        android:id="@+id/eat_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eat_prompt"
        android:textColor="@color/night_primary_complementary"
        app:layout_constraintLeft_toLeftOf="@id/restaurantsTV"
        app:layout_constraintStart_toStartOf="@id/restaurantsTV"
        app:layout_constraintTop_toBottomOf="@id/restaurantsTV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurantsRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:paddingBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eat_prompt" />


</androidx.constraintlayout.widget.ConstraintLayout>