<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/night_accent_complementary50"
    android:fitsSystemWindows="true"
    android:foregroundGravity="center"
    app:layout_anchorGravity="center"
    tools:context=".activities.MasterNavigationPageActivity">

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:drawableLeft="@drawable/person_icon"
        android:drawableTint="@color/night_primary_complementary"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/profileNavPrompt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cartBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/cartBtn"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:drawableLeft="@drawable/cart_icon"
        android:drawableTint="@color/night_primary_complementary"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/cartNavPrompt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ordersBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileBtn" />

    <Button
        android:id="@+id/ordersBtn"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:drawableLeft="@drawable/time_icon"
        android:drawableTint="@color/night_primary_complementary"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/ordersNavPrompt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>