<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    app:cardBackgroundColor="@color/night_primary_complementary"
    app:cardCornerRadius="4dp"
    app:cardElevation="6dp"
    app:cardMaxElevation="12dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/restaurantPictureDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/restaurantNameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:paddingHorizontal="12dp"
            android:paddingTop="12dp"
            android:text="@string/restaurantNamePlaceholder"
            android:textColor="@color/night_accent_complementary100"
            android:textDirection="ltr"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/restaurantAddressTV"
            app:layout_constraintEnd_toStartOf="@id/proceedBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/proceedBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img" />

        <TextView
            android:id="@+id/restaurantAddressTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:paddingHorizontal="12dp"
            android:paddingBottom="12dp"
            android:text="@string/restaurantAddressPlaceholder"
            android:textColor="@color/night_accent_complementary50"
            android:textDirection="ltr"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/proceedBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/proceedBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurantNameTV" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proceedBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="@color/night_accent_complementary75"
            android:drawableEnd="@drawable/proceed_arrow"
            android:drawableTint="@color/night_primary_complementary"
            android:foregroundTint="@color/night_primary_complementary"
            android:paddingStart="-16dp"
            android:paddingEnd="12dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>